@@ -8,6 +8,7 @@ DIST gitlab-shell-5.0.5.tar.gz 682091 SHA256 c1583e931280e93d59f86a571a628e697d8
 DIST gitlab-shell-5.1.1.tar.gz 688960 SHA256 33a4b79b0b06ad935a4bcf1ad41ab88882eb31b349cca007f1e60f3eb5826a06 SHA512 a247e37bfd7b8fe28fe68f3b9d401ccfe534bd4221bce2cda092f6a72a6926f49944f4a008c71636426ca1f7ae6033f53035bc10a8d8121c8093e09abfc675f4 WHIRLPOOL 29aaa30c73997a28cdb68485087a36c6c8109b9f909e2776899f1094a17dcbc6189ed759f9acc81caa6cda516b44f89ad36567bd9f96ec6802e4553182607e20
 DIST gitlab-shell-5.3.1.tar.gz 708811 SHA256 989e7976c56d09d455e5e67e587426be2aca71ef2e27541c8654e74aac82f68c SHA512 00c6dde3d7a59c956396988b2f5790291c44fe134812588ab5c03e7612d49c08de2f5fd08a8b4a55a2c95a46db1d0cdb0e07469958d5c0d6c778d0f9dd279afc WHIRLPOOL 266218edb547e2e7fab95982f78d5c2a7057e061a48a854697949214791dab512f4512a57197ce1ac901dd2b97f4e363a39b8cd2ac74f5cb002ffdc38b8fd06a
 DIST gitlab-shell-5.4.0.tar.gz 713393 SHA256 2c778f559617a63911fbc9fdb531d0cd2266b56eb2d3c8533f455312aa185eb0 SHA512 81991ee212f5babfe5217aa14afbf2cdc3aee6e3b44418c6262632fbadaf97eecf0688537e602b4cd297881134f789b57475c9a43a85b57ab00b3feebf6dca71 WHIRLPOOL da193bcbccfe8248a90fd5c6a1d1df61bfe9ec045a8a3cb6a83660f9fa74b6b7e0f23cf96629cd8e7477dcfda4ad0fb39ebe4395c58350f10eb9f9a765750d9d
+DIST gitlab-shell-5.8.0.tar.gz 718927 SHA256 7c6a02e12ec0efcca23b9200dc18be29a8ce2bf70f9802bb188fc22dbf1875d3 SHA512 f17e4ec95dce29608684de27d9a4f7a3fa69cd25fb68223576a4501ef83fc50bfb74668599672edc8c8d670585b47e22825004cba2227bb4ef6f0e3c27d06b59 WHIRLPOOL 941c5c9daf6e319e44c49af627474e87f33e964bbad0b59b84f90f7b7e8ca82b5f0635102964b9fd7b74f8101b6af6539aa966978468105ad9b004cb2fa76222
 EBUILD gitlab-shell-5.0.0.ebuild 3653 SHA256 346718615330cb98f84556a65fbac2561c14fab6ed22a42d4fa6cbcb651faa98 SHA512 390c922cc1eebd3dd7fa10e94b58a61a2d7363e19b59cffbd54be40c6fee60a894487c168b42294af5bae772d94c687dd14edf48c50c43696a52e4c8db87088c WHIRLPOOL 1278ab21caa8385e21976bed117ac1428ea2ed08576e20f58c7337ab8e8d565c4bf4742895458373878f19dfc48924f808bb4950303f48ce17af216f797f885a
 EBUILD gitlab-shell-5.0.2.ebuild 3653 SHA256 0af6f31c8d068612d618ec4d5959e06e78cd867dfb994079793fb2041803663f SHA512 65eac38adc73d5bec64bb95214a0c9599a72d51b6e4c766881b39087afc0b72b4180fad30b7ee5f46e85949a2d52956475db7b8d52976a12bae7d51681e140e1 WHIRLPOOL 8d406881dfd71e0b3b9168f3fd23766a04dfeecfdf668de9e3298a5650333c851feb6702c8f2134cfe683fd280369481cd53896ec95d1b89f4f9a92d89eb3f7b
 EBUILD gitlab-shell-5.0.4.ebuild 3653 SHA256 8e235cbe5a233e0382aadb466ee130c8b76bc3474fdfe175bf27a38d2cb975a0 SHA512 16e3a82a9705dd525fb24d3cb3981c12c2dbf3f944055570b1299cfcd67ad480c3ad69068c4347c61274003c20908bf2918a336d80c7a5148df5418fd1524d8a WHIRLPOOL edab6e46dc3af776db143be3a0009917f55fdcd01528c746bfa69b7acb0135d9880387e46653c31b5a04c60d6aee51efd7773aa2403e1cf0142d4a3e4a380835
@@ -15,5 +16,6 @@ EBUILD gitlab-shell-5.0.5.ebuild 3646 SHA256 6ccddb217f38775da4165ffd595965b8172
 EBUILD gitlab-shell-5.1.1.ebuild 3888 SHA256 9e7c878a166555bdd6c14d1be5929b0363eabe4352073db46e84905937323169 SHA512 4bb335f810619f813e84a20a0861ab3e1fdff1134b829f55bd209e70fcfb43fdac96b9fe011aed1a031b6674518c8b36be13d8fb7c8f9ea9cbc3335e3f0b1edc WHIRLPOOL 0285dacb4e03ede570ed4c5d07153d0c7835e91d7dc7742064021c92ec8d2d04ffc9a6d2baf533f86edf4bd18337658a96297918e38ff6c81ee2291284e9a237
 EBUILD gitlab-shell-5.3.1.ebuild 3888 SHA256 7075b271eeee6da9a8bd9f9e5aaf9c0c9612ab2d27f8399df32628e7bde53fa2 SHA512 b7c567e262e23fdb9f6845b141aa4157d31b86ce115e305f56f30e1673dcd9cb1a4dce82f45a4139ff47008c9072cc743d76f00ab92f4d9fa869dcf4ecd26cc4 WHIRLPOOL e3efacb596afb62d21feffa26e7c2b2947a03e742a55edd1d4f60746395ab6edd636824d14f937d3e66003fdec9b168ebb80ba31a34e9ee6faf8964cca8839e7
 EBUILD gitlab-shell-5.4.0.ebuild 3888 SHA256 3e66c555e3d1f7a8e9cdacd615917014329b42a12fd8f7d74faa01493bd77add SHA512 e2d6afbce2906462943b3405b386ab92a8f6529790de206806b7cddd0d0425fd2fca06ff9a76218323bb6f2bc9b08175677c97e9d111e28af995636acca3bbbc WHIRLPOOL 9889b9cdf7bd3f0d2109cc4c6e6873c0bdb424977537a404afe92935a9a831f81d1a4dec18133668d9f4625e29e60990ac065e7b521b80fa124eec4704b9a65d
-MISC ChangeLog 4277 SHA256 40eeac9d723336be3aaf1868a1a893c02ce6670eaa0c60c7a08fa718c63a0d2b SHA512 d60bba4aacdc44ac5e6b2f635515b2c018ae2dac61bd622818cab213b14d4cdc8a20b09be140cf2e458f4c0816ba41de35dbbd06b138fccca14be1d39e8370ad WHIRLPOOL 8b94560d063f6f1e85818650044bcdca11979855e3d6426cb098235cdcb6c7818911c9c0d98be916125fc7a376ccd5a4012ba3c2b9977a97482f5a4642425a6a
+EBUILD gitlab-shell-5.8.0.ebuild 3907 SHA256 fe1bd700fc6964e69296160da0c75dd5193f6a999e6a985b179ddd7587a96560 SHA512 fe3e0c31daed0cdad9beeb9e45c4002b036475db53aed54a8cdfc54363452ec61ec53ada8116b6c4cfdf333678263a552541c59205fb92b47a5c882b70b0ae2a WHIRLPOOL 55a81924b0b8bc81d3e8726ac0a2422245cb83d095643e80564c4e4f81dc2ebbf11218cdf545953f304e44f1c13d1846216eabb4ad6810edcbc2dffc93692707
+MISC ChangeLog 4483 SHA256 ee1edc0a084fd77a7ccdf2975b29f7065a4424e12ff60ad3adbd677d4ff3f86e SHA512 eddd4c980b5cdccbbd1b7d00d0bdabd3865c299bacaa848f855ac4db3b9cfa59b8da4a0be26243431029d1ae6cc353226c3b5dd68c3aec8dd640143367c37014 WHIRLPOOL 1f46f337539f81756b492ebcd1314349a909deb592b4bb4cce90c1369937bfe53a0455bdb518086a07a67da3f235a55cce8f4b13bd1e0b05189efac17be7843e
 MISC metadata.xml 248 SHA256 7b43be15755627edf5c12cf1b50c607d781558640bf8375d685d51d7ade99a32 SHA512 29f9b96b0a77546cce6a8bffd82fae2fd0939d32a7a05ffd0d91f9250a019a3ddaa599b93988c82daabb9c4c4b284dd947e2c47f6ca7727b8539cffa91bcb8c2 WHIRLPOOL 993013c9878ead35469db13d3072f694a341ee654182e0c31d0678f5dd6de4bdc8d59a0b7bb6d685dc41ea6b55dac518cd8034131baea8002170c680e50304d1
